@@ -1,0 +1,10 @@
+# qstring-comparison-to-implicit-char
+
+Finds cases where QString is being compared to an int literal but it's casting to QChar implicitly.
+This is often a mistake as the developer intended to compare against the string representation of the integer.
+
+Example:
+```
+if (myString == 5000) { // warning: QString being compared to implicit QChar
+}
+```
